frame/support/test/tests/construct_runtime_ui/invalid_module_entry.stderr
error: expected one of: `Pallet`, `Call`, `Storage`, `Event`, `Error`, `Config`, `Origin`, `Inherent`, `ValidateUnsigned`, `FreezeReason`, `HoldReason`, `LockId`, `SlashReason`
  --> $DIR/invalid_module_entry.rs:10:23
   |
10 |         Balance: balances::{Unexpected},
   |                             ^^^^^^^^^^
